# fibo

./: configure.ac
src/: Makefile.am  fibo.c  fibonacci.c  fibonacci.h  local_types.h  prime.c  prime.h
